@@ -381,11 +381,27 @@ class CassandraRDD[R] private[connector] (
 object CassandraRDD {
   def apply[T](sc: SparkContext, keyspaceName: String, tableName: String)
               (implicit ct: ClassTag[T], rrf: RowReaderFactory[T]): CassandraRDD[T] =
+
     new CassandraRDD[T](
-      sc, CassandraConnector(sc.getConf), keyspaceName, tableName, AllColumns, CqlWhereClause.empty)
+      sc,
+      CassandraConnector(sc.getConf),
+      keyspaceName,
+      tableName,
+      AllColumns,
+      CqlWhereClause.empty,
+      ReadConf.fromSparkConf(sc.getConf)
+    )
 
   def apply[K, V](sc: SparkContext, keyspaceName: String, tableName: String)
                  (implicit keyCT: ClassTag[K], valueCT: ClassTag[V], rrf: RowReaderFactory[(K, V)]): CassandraRDD[(K, V)] =
+
     new CassandraRDD[(K, V)](
-      sc, CassandraConnector(sc.getConf), keyspaceName, tableName, AllColumns, CqlWhereClause.empty)
+      sc,
+      CassandraConnector(sc.getConf),
+      keyspaceName,
+      tableName,
+      AllColumns,
+      CqlWhereClause.empty,
+      ReadConf.fromSparkConf(sc.getConf)
+    )
 }
